syntax = "proto3";

option java_package = "com.qianxun.grpc.lib.sysDept";

package sysDept;

import public "google/protobuf/timestamp.proto";

service sysDeptService {
    rpc GetById(GetByIdReq) returns (SysDept){}
    rpc GetList(GetListReq) returns (stream SysDept) {}
    rpc Insert(SysDept) returns (Result) {}
    rpc Update(SysDept) returns (Result) {}
    rpc Delete(SysDept) returns (Result) {}
}

message GetByIdReq {
    int32 id = 1;
    int32 lang_id = 2;
}

message GetListReq {
    string query = 1;
    int32 page_size = 2;
    int32 page = 3;
    int32 lang_id = 4;
}

message Result {
    bool success = 1;
}

message SysDept {
    int32 id = 1;
    int32 lang_id = 2;
    int32 parent_id = 3;
    string name = 4;
    int32 sort = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
    int32 status = 8;
    string db_source = 9;
}
