syntax = "proto3";

option java_package = "com.qianxun.grpc.lib.sysLang";

package sysLang;

import public "google/protobuf/timestamp.proto";

service SysLangService {
    rpc GetById(ByIdReq) returns (SysLang){}
    rpc GetList(GetListReq) returns (stream SysLang) {}
    rpc Insert(SysLang) returns (Result) {}
    rpc Update(SysLang) returns (Result) {}
    rpc Delete(ByIdReq) returns (Result) {}
}

message ByIdReq {
    int32 id = 1;
}

message GetListReq {
    string query = 1;
    int32 page_size = 2;
    int32 page = 3;
}

message Result {
    bool success = 1;
}

message SysLang {
    int32 id = 1;
    string name = 2;
    string lang_code = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
    int32 deleted = 6;
}
